--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,37 @@ description = "a high-performance 3D-focused game engine"
 license = "MIT"
 repository = "https://github.com/dzgames/TimberWolf"
 
+[features]
+default = ["gfx-backend-vulkan"]
+vulkan = ['gfx-backend-vulkan']
+metal = ["gfx-backend-metal"]
+gl = ["gfx-backend-gl"]
+dx11 = ["gfx-backend-dx11"]
+dx12 = ["gfx-backend-dx12"]
+
 [dependencies]
 chrono = "0.4.6"
+gfx-hal = "0.2.1"
+gfx-backend-empty = "0.2.0"
+gfx-backend-vulkan = { version = "0.2.2", optional = true }
+
+# Native (not WebAssembly)
+[target.'cfg(not(target_arch = "wasm32"))'.depdencies]
+gfx-backend-gl = { version = "0.2.0", features = ["glutin"], optional = true }
+winit = "0.19"
+glsl-to-spirv = "0.1.4"
+
+# WebAssembly
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+gfx-backend-gl = { version = "0.2.0", optional = true, default-features = false }
+web-sys = { version = "0.3.24", features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ] }
+
+
+# MacOSX and iOS
+[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies]
+gfx-backend-metal = { version = "0.2.1", optional = true }
+
+# Windows
+[target.'cfg(windows)'.dependencies]
+gfx-backend-dx11 = { version = "0.2.0", optional = true }
+gfx-backend-dx12 = { version = "0.2.0", optional = true }
