--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,9 @@ dx12 = ["gfx-backend-dx12"]
 
 [dependencies]
 chrono = "0.4.6"
-gfx-hal = "0.2.1"
-gfx-backend-empty = "0.2.0"
 gfx-backend-vulkan = { version = "0.2.2", optional = true }
 cgmath = "0.17.0"
+rendy = "0.4.0"
 
 # Native (not WebAssembly)
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -32,7 +31,6 @@ glsl-to-spirv = "0.1.4"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 gfx-backend-gl = { version = "0.2.0", optional = true, default-features = false }
 web-sys = { version = "0.3.24", features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ] }
-
 
 # MacOSX and iOS
 [target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies]
