--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "timberwolf"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Alexander Barber <alex@dangerzonegames.com>"]
 edition = "2018"
 description = "a high-performance 3D-focused game engine"
 license = "MIT"
-repository = "https://github.com/dzgames/TimberWolf"
+repository = "https://github.com/DangerInteractive/TimberWolf"
 
 [dependencies]
 chrono = "0.4.10"
