--- a/crates/wyrd/Cargo.toml
+++ b/crates/wyrd/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Alexander Barber <alex@dangerzonegames.com>"]
 edition = "2018"
 description = "an entity component system created for TimberWolf"
 license = "MIT"
+repository = "https://github.com/DangerInteractive/TimberWolf"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
