--- a/examples/triangle/Cargo.toml
+++ b/examples/triangle/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "timberwolf-demo-triangle"
+name = "example"
 version = "0.5.0"
 authors = ["Alexander Barber <alex@dangerzonegames.com>"]
 edition = "2018"
